Do not use absolute paths

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/offspot.png" />
+    <link rel="icon" type="image/png" href="./offspot.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Offspot Metrics</title>
-    <link rel="stylesheet" type="text/css" href="/loader.css" />
+    <link rel="stylesheet" type="text/css" href="./loader.css" />
   </head>
   <body>
     <div id="loading-bg">
@@ -16,6 +16,6 @@
       </div>
     </div>
     <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <script type="module" src="./src/main.ts"></script>
   </body>
 </html>
