Add support for file-manager, in addition to EduPi

--- a/dev/file-browser-data/home/index.html
+++ b/dev/file-browser-data/home/index.html
@@ -13,5 +13,7 @@
         <a href="//kiwix.localhost:8000/viewer#sqa.stackexchange.com_en_all_2023-05">Software Quality Assurance and Testing</a>
         <br>
         <a href="//kiwix.localhost:8000/viewer#devops.stackexchange.com_en_all_2023-05">DevOps</a>
+        <br>
+        <a href="//filemanager.localhost:8000">File manager</a>
 	</body>
 </html>
